--- a/src/features/ListOfTodolists/ui/TodolistRedux/ToDoList.module.css
+++ b/src/features/ListOfTodolists/ui/TodolistRedux/ToDoList.module.css
@@ -21,7 +21,7 @@
   align-self: flex-start;
   overflow-y: auto;
   width: 100%;
-  max-height: 50vh;
+  max-height: 60vh;
 }
 
 .list::-webkit-scrollbar {
@@ -88,6 +88,12 @@
   display: flex;
   flex-wrap: nowrap;
   gap: 10px;
+}
+
+@media (height <= 1250px) {
+  .list {
+    max-height: 50vh;
+  }
 }
 
 @media (height <= 1000px) {
